--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -8,8 +8,9 @@
 
 {% block content %}
     <div class="all-projects">
-        <div class="container my-2">
-            <h1>Hello World</h1>
+        <div class="container my-5">
+            <p class="fs-4 font-weight-bold text-left my-2">Welcome to my portfolio! Here, you can explore all of my projects, showcasing my skills and expertise in various domains.</p>
+            <p class="fs-5 text-left my-2">You can search for projects by their names or use the provided buttons to filter them based on specific criteria.</p>
         </div>
         <div class="container my-5 filters">
             <input class="input-group-text m-1 p-1" type="text" placeholder="Search by name..." id="name-search">
